<resources>
    <string name="app_name">Android_practice</string>
    <string name="login">Login</string>
    <string name="btn_textview">TextView</string>
    <string name="under_line_text"><u>This is under line text</u></string>
    <string name="strikethrough"><strike>This is strike through</strike></string>
    <string name="underlineWithStrike"><u><strike>UnderLine with strike</strike></u></string>
    <string name="multiColorString">
        <font fgcolor="FF9C27B0">Color Text</font>
        <font size="20">big Size</font>
    </string>
    <string name="AllWidget_button_practice">Button Practice</string>
    <string name="allWidget_edit_text">Edit Text</string>
    <string name="btn_simple">Simple</string>
    <string name="btn_bg_change">Bg change</string>
    <string name="btn_inset">Inset</string>
    <string name="btn_icone">Icone</string>
    <string name="btn_corner">Corner</string>
    <string name="btn_ripple">Ripple</string>
    <string name="btn_appcompact">AppCompact</string>
    <string name="btn_verticle">Verticle</string>
    <string name="btn_material">Material</string>
    <string name="btn_material2">Material</string>
    <string name="btn_back">Back</string>
    <string name="btn_elevated">Elevated</string>
    <string name="btn_plain">Plain</string>
    <string name="btn_outlined">OutLined</string>
    <string name="hint_enter_number">Number</string>
    <string name="allWidget_radio_button">Radio Button</string>
    <string name="txt_food_menu">Food Menu</string>
    <string name="txt_pizza">Pizza</string>
    <string name="txt_burger">Burger</string>
    <string name="txt_sandwich">Sandwich</string>
    <string name="txt_salad">Salad</string>
    <string name="txt_onion">Onion</string>
    <string name="txt_cheese">Cheese</string>
    <string name="btn_order">Order</string>
    <string name="btn_switch">Switch</string>
    <string name="btn_imageview">ImageView</string>
    <string name="switch_show_passwords">Show Passwords</string>
    <string name="btn_chips">Chips</string>
    <string name="txt_types_of_chips">Types of Chips</string>
    <string name="chips_default">Default</string>
    <string name="chips_entry">Entry</string>
    <string name="chip_choice">Choice</string>
    <string name="chip_action">Action</string>
    <string name="chup_filter">filter</string>
    <string name="chip_chip_icon">Chip Icon</string>
    <string name="txt_customchip">CustomChip</string>
    <string name="txt_filter">Filter</string>
    <string name="txt_custom">Custom</string>
    <string name="txt_new">New</string>
    <string name="btn_spinner">Spinner</string>
    <string name="txt_custom_spinner">Custom Spinner</string>
    <string name="btn_progressbar">ProgressBar</string>
    <string name="btn_download">Download</string>
    <string name="txt_value">Value =</string>
    <string name="tvRating">Rating =</string>
    <string name="btn_calendarview">CalendarView</string>
    <string name="txt_select_date">Select Date</string>
    <string name="txt_select_time">Select Time</string>
    <string name="hint_check_autocomplete">Check AutoComplete</string>
    <string name="txt_players">Players</string>
    <string name="btn_include">Include</string>
    <string name="btn_merged">Merged</string>
    <string name="txt_bank_ec">Bank Ec</string>
    <string name="txt_bank_finance_kit">Bank, Finance Kit</string>
    <string name="txt_welcome">Welcome</string>
    <string name="txt_please_provide_following">Please provide following</string>
    <string name="txt_detail_for_your_new_account">detail for your new account</string>
    <string name="btn_screens">Screens</string>
    <string name="btn_ui_components">UIComponents</string>
    <string name="hint_full_name">Full Name</string>
    <string name="btn_sign_up_my_account">Sign up my Account</string>
    <string name="btn_sign_up_with_phone_number">Sign up with Phone Number</string>
    <string name="tv_by_creating_your_account_you_have_to_agree_with_our_teams_and_conditions">By creating your account you have to agree with our Teams and Conditions.</string>
    <string name="txt_already_have_an_account">Already have an Account</string>
    <string name="txt_signIn">Sign In</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="txt_welcome_back">Welcome Back!</string>
    <string name="txt_sign_in_to_continue">Sign in to Continue</string>
    <string name="txt_forgot_password">Forgot Password ?</string>
    <string name="txt_sign_in_my_account">Sign in My Account</string>
    <string name="tv_sign_up">Sign Up</string>
    <string name="txt_summary">Summary</string>
    <string name="txt_this_month_spending">This Month Spending</string>
    <string name="txt_1_785">$1,785</string>
    <string name="txt_well_done_you_have_maintain_your_spending_under_control">Well done you have maintain your \n spending under control</string>
    <string name="btn_great">Great</string>
    <string name="txt_top_category">Top Category</string>
    <string name="txt_lunch_dinner">Lunch and Dinner</string>
    <string name="tv_price">450</string>
    <string name="btn_on_track">On Track</string>
    <string name="btn_fab">Fab</string>
    <string name="fab_extend_fab">Extend fab</string>
    <string name="fab_add">Add</string>
    <string name="txt_received">Received</string>
    <string name="txt_cancel">Cancel</string>
    <string name="tv_custom_snack">Custom Snack</string>
    <string name="btn_custom_snackBar">Custom SnackBar</string>
    <string name="txt_dismiss">Dismiss</string>
    <string name="txt_custom_snack">Custom Snack</string>
    <string name="txt_android_developer">Android Developer</string>
    <string name="btn_custom_snack_bar">Custom SnackBar</string>
    <string name="btn_tab_layout">Tab Layout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_this_is_call_fragment">This Is Call Fragment</string>
    <string name="txt_this_is_chat_fragment">This is Chat Fragment</string>
    <string name="txt_this_is_status_fragment">This is Status Fragment</string>
    <string name="txt_australia">Australia</string>
    <string name="txt_all_countries">All Countries</string>
    <string name="txt_china">China</string>
    <string name="txt_india">India</string>
    <string name="btn_app_bar_layout">App Bar Layout</string>
    <string name="btn_Constrain_layouts">Constraint Layouts</string>
    <string name="btn_relative_layout">Relative Layout</string>
    <string name="btn_linear_layout">Linear Layout</string>
    <string name="btn_coordinator_layout">Coordinator Layout</string>
    <string name="content">With the idea of imparting programming
      knowledge, Mr. Sandeep Jain, an IIT Roorkee alumnus started a
      dream, GeeksforGeeks. Whether programming excites you or you feel
      stifled, wondering how to prepare for interview questions or how to
      ace data structures and algorithms, GeeksforGeeks is a one-stop solution.
      With every tick of time, we are adding arrows in our quiver. From articles
      on various computer science subjects to programming problems for practice,
      from basic to premium courses, from technologies to entrance examinations,
      we have been building ample content with superior quality. In a short span,
      we have built a community of 1 Million+ Geeks around the world, 20,000+
      Contributors and 500+ Campus Ambassadors in various colleges across the nation.
      Our success stories include a lot of students who benefitted in their placements
      and landed jobs at tech giants. Our vision is to build a gigantic network of
      geeks and we are only a fraction of it yet.
    </string>
    <string name="btn_grid_layout">Grid Layout</string>
    <string name="btn_collapsing_toolbar">Collapsing ToolBar</string>
    <string name="hint_select_date">Select Date</string>
    <string name="btn_custom_calender">Custom Calender</string>
    <string name="txt_frame_layout_practice">Frame Layout Practice</string>
    <string name="txt_last_text">Last Text</string>
    <string name="btn_frame_layout">Frame Layout</string>
    <string name="txt_restaurant_name">Restaurant Name</string>
    <string name="txt_address">Address</string>
    <string name="btn_recyclerview">RecyclerView</string>
    <string name="tab_linear_manager">Linear Manager</string>
    <string name="tab_grid_manager">Grid Manager</string>
    <string name="tab_staggered_manager">Staggered Manager</string>
    <string name="btn_listview">ListView</string>
    <string name="tab_simple_list">Simple List</string>
    <string name="tab_custom_list">Custom List</string>
    <string name="tab_search_view">Search View</string>
    <string name="txt_search_here">Search Here...</string>
    <string name="rv_expandable">Expandable</string>
    <string name="tab_Swipe">Swipeable</string>
    <string name="btn_viewpager2">ViewPager2</string>
    <string name="txt_name">Name:</string>
    <string name="txt_dataBinding_example">DataBinding Example</string>
    <string name="btn_dataBinding">DataBinding</string>
    <string name="btn_bottomnavigation">BottomNavigation</string>
    <string name="menu_home">Home</string>
    <string name="menu_download">Download</string>
    <string name="menu_profile">Profile</string>
    <string name="tv_rental_id">Rental ID</string>
    <string name="tv_facility">Facility</string>
    <string name="tv_reservation_type">Reservation Type</string>
    <string name="tv_enter_after">Enter After</string>
    <string name="tv_exit_before">Exit Before</string>
    <string name="btn_detail">Details</string>
    <string name="tab_multiple_holder">Multiple Holder</string>
    <string name="pr_price">$20</string>
    <string name="cb_is_rented_before">Is Rented Before?</string>
    <string name="appBar_past_reservation">Past Reservation</string>
    <string name="btn_filter">Filter</string>
    <string name="hint_search_by_facility_rental_id_etc">Search by Facility...</string>
    <string name="btn_tagB_design">TagB Design</string>
    <string name="rate_now"><u>Rate Now</u></string>
    <string name="txt_give_rating">Give Rating</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_done">Done</string>
    <string name="btn_simple_toast">Simple Toast</string>
    <string name="btn_toast">Toast</string>
    <string name="btn_center_toast">Center Toast</string>
    <string name="btn_custom_toast">Custom Toast</string>
    <string name="txt_activities">Activities</string>
    <string name="txt_carbo">Carbo</string>
    <string name="desc_medical_text">A medical student-run clinic is a health care delivery program in which medical students take primary responsibility for logistics</string>
    <string name="btn_reverse_kt">Reverse KT</string>
    <string name="txt_water"> Water</string>
    <string name="txt_heading_revers_kt">It\'s all about how we treat you</string>
    <string name="txt_subHeading_reversKt">That\'s Powerful healing</string>
    <string name="txt_today_activities_reverse_kt">Today Activities</string>
    <string name="txt_details">Details</string>
    <string name="txt_after_lunch">After Lunch</string>
    <string name="txt_azoptex_obat">Azoptex Obat</string>
    <string name="txt_10mg">10mg</string>
    <string name="txt_2Liters">2 Liters</string>
    <string name="perDay">/day</string>
    <string name="txt_Duration">Duration</string>
    <string name="txt_2Hour">2 hours</string>
    <string name="txt_speed">Speed</string>
    <string name="txt_4Km">4 hours</string>
    <string name="txt_Fitness">Fitness</string>
    <string name="percentage_sign">%</string>
    <string name="txt_today_at">Today at:</string>
    <string name="txt_mmhg">mmHg.</string>
    <string name="txt_description">Description</string>
    <string name="txt_glucose">Glucose:</string>
    <string name="btn_image_picker">Image Picker</string>
</resources>