<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uiwidgets.ToastPractice">

    <Button
        android:id="@+id/btnSimpleToast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_simple_toast"
        android:layout_marginTop="@dimen/dp_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCenterToast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_center_toast"
        android:layout_marginTop="@dimen/dp_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSimpleToast" />

    <Button
        android:id="@+id/btnCustomToast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_custom_toast"
        android:layout_marginTop="@dimen/dp_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCenterToast" />
</androidx.constraintlayout.widget.ConstraintLayout>